--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap-vue": "^2.21.2",
     "buefy": "^0.9.7",
+    "bulma": "^0.9.2",
+    "prismjs": "^1.23.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
+    "vue-code-highlight": "^0.7.6",
     "vue-loader": "^15.9.6",
-    "vue-magick-pen": "^0.1.7",
+    "vue-magick-pen": "^0.1.21",
     "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
