--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "bootstrap-vue": "^2.21.2",
+    "bootstrap": "^4.6.0",
     "buefy": "^0.9.7",
     "bulma": "^0.9.2",
+    "jquery": "^3.6.0",
     "prismjs": "^1.23.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-code-highlight": "^0.7.6",
     "vue-loader": "^15.9.6",
-    "vue-magick-pen": "^0.1.21",
+    "vue-magick-pen": "^0.1.22",
     "vue-template-compiler": "^2.6.12"
   },
   "version": "0.1.0",
